# AAEConnect

./: .eslintrc.js  .gitignore  DEPLOYMENT.md  DEPLOYMENT_READY.md  Dockerfile  Dockerfile.test  PHASE2-IMPLEMENTATION.md  README.md  docker-compose.prod.yml  docker-compose.yml  env.example  jest.config.js  load-test-report-2025-09-10T14-10-13.966Z.json  load-test-report-2025-09-10T14-15-31.762Z.json  package-lock.json  package.json  workspace.code-workspace
.bmad-core/: agent-coordination.md  bmad-config.json  execution-summary.md  install-manifest.yaml
.bmad-core/agents/core/: 01-strategic-planning-agent.md  02-system-architecture-agent.md  03-lead-development-agent.md  04-performance-engineering-agent.md  05-security-engineering-agent.md  06-qa-automation-agent.md  07-frontend-specialist-agent.md  08-backend-specialist-agent.md  09-mobile-development-agent.md  10-desktop-development-agent.md  11-devops-engineering-agent.md  12-integration-specialist-agent.md  13-database-optimization-agent.md  14-network-performance-agent.md  15-compliance-audit-agent.md
.bmad-core/agents/specialized/: 16-ux-research-agent.md  17-security-penetration-agent.md  18-performance-monitoring-agent.md  19-innovation-research-agent.md  20-code-quality-agent.md  21-documentation-agent.md  22-localization-agent.md  23-accessibility-agent.md  24-analytics-agent.md  25-disaster-recovery-agent.md
.github/: labeler.yml
.github/workflows/: aaeconnect-ci-cd.yml  ci-cd.yml  performance-monitoring.yml  pr-automation.yml  security-audit.yml  security-scan.yml
backend/: Cargo.toml  Dockerfile.prod
backend/src/: config.rs  main.rs
backend/src/handlers/: auth.rs  files.rs  health.rs  messages.rs  mod.rs  users.rs  websocket.rs
backend/src/middleware/: metrics.rs  mod.rs
backend/src/models/: mod.rs
backend/src/services/: auth.rs  database.rs  matrix.rs  messaging.rs  mod.rs  redis.rs
backend/src/utils/: mod.rs
desktop/: package.json
desktop/src/: App.svelte  main.js
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
docker/nginx/: nginx.conf
docker/prometheus/: prometheus.prod.yml  prometheus.yml
docker/redis/: redis.conf
docs/architecture/: system-architecture.md
docs/prd/: product-requirements.md
docs/user-training/: aae-employee-guide.md
frontend/: package-lock.json  package.json  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1757514122283-0aedaa378169e.mjs
frontend/src/: app.css  app.html
frontend/src/lib/: matrixClient.ts
frontend/src/routes/: +layout.svelte  +page.svelte
mobile/aaeconnect_mobile/: pubspec.yaml
mobile/aaeconnect_mobile/lib/: main.dart
mobile/aaeconnect_mobile/lib/core/theme/: aae_theme.dart
monitoring/grafana/dashboards/: aae-performance.json
monitoring/prometheus/: prometheus.yml
scripts/: ai-features.js  deploy-production.sh  disaster-recovery.sh  load-test.js
src/: index.js
src/__tests__/: app.test.js
src/services/: cad-preview.js  matrixService.js  offline-sync.js
tests/: integration.test.js  performance.test.js
