[package]
name = "aaeconnect-backend"
version = "1.0.0"
edition = "2021"
authors = ["AAEConnect Team <dev@aae.co.th>"]
description = "AAEConnect High-Performance Backend - Rust + Axum"

[dependencies]
# Web Framework
axum = { version = "0.7", features = ["ws", "macros", "multipart"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.5", features = ["fs", "cors", "trace", "compression"] }
hyper = { version = "1.0", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
redis = { version = "0.24", features = ["tokio-comp", "cluster"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Security & Encryption
argon2 = "0.5"
jsonwebtoken = "9.0"
ring = "0.17"
rustls = "0.22"
rustls-pemfile = "2.0"

# Matrix Protocol
matrix-sdk = { version = "0.7", features = ["e2e-encryption", "sso-login"] }
ruma = { version = "0.10", features = ["client-api-c", "appservice-api-c"] }

# gRPC
tonic = { version = "0.10", features = ["tls"] }
prost = "0.12"

# WebSocket
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }

# Monitoring & Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

# Configuration
config = "0.14"
dotenvy = "0.15"

# Utilities
anyhow = "1.0"
thiserror = "1.0"
futures = "0.3"
bytes = "1.0"
mime = "0.3"

[build-dependencies]
tonic-build = "0.10"

[dev-dependencies]
tokio-test = "0.4"
axum-test = "14.0"
tempfile = "3.0"

[[bin]]
name = "aaeconnect-server"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true